# cvenv

./: LICENSE
error_center/: pyproject.toml
error_center/docs/: central.md  central_erros.drawio
error_center/error_center/: asgi.py  settings.py  urls.py  wsgi.py
error_center/logs/: admin.py  serializers.py  urls.py  views.py
error_center/logs/migrations/: 0001_initial.py
error_center/logs/models/: logs.py  users.py
simpleapp/: db.sqlite3
simpleapp/products/: forms.py  models.py  tests.py  urls.py  views.py
simpleapp/products/migrations/: 0001_initial.py  0002_auto_20200613_1818.py
simpleapp/products/templates/: base.html
simpleapp/products/templates/products/: create.html  list.html  update.html
simpleapp/simpleapp/: asgi.py  settings.py  urls.py  wsgi.py
src/: __main__.py  cvenv.py
tests/: test_cvenv.py
tutorialdj/: pyproject.toml
tutorialdj/src/: db.sqlite3  manage.py
tutorialdj/src/polls/: admin.py  views.py
tutorialdj/src/polls/migrations/: 0001_initial.py
tutorialdj/src/polls/templates/polls/: detail.html  index.html
tutorialdj/src/tutorialdj/: asgi.py  settings.py  urls.py  wsgi.py
tutorialdj/src/tutorialdj.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tutorialdj/tests/: test_tutorialdj.py
